sap/4.3/modules/ROOT/pages/sap-connector-reference.adoc
= SAP Connector Reference 4.3
:page-aliases: connectors::sap/sap-connector-reference-43.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Premium]

SAP Connector v4.3

Anypoint Connector for SAP (SAP Connector) provides a class that has an overall configuration for the SAP extension.

Release Notes: xref:release-notes::connector/sap-connector-release-notes-mule-4.adoc[SAP Connector Release Notes]


== Configurations
---
[[inbound-config]]
=== Inbound

Default configuration for SAP extension inbound elements.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<inbound-config_simple-connection-provider, Simple Connection Provider>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances when it sees fit. |  |
| Encoding a| String a|  Canonical name of encoding.  https://docs.oracle.com/javase/7/docs/technotes/guides/intl/encoding.doc.html[More details about supported encodings]. |  |
|===

== Connection Types
[[inbound-config_simple-connection-provider]]
=== Simple Connection Provider


Connection provider that connects using username and password.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| SAP system number a| String |  The two-digit system number (sysnr) of the SAP system. |  | x
| SAP client ID a| String |  Three-digit client number. Preserve leading zeros if they appear in the number. |  | x
| Destination Name a| String |  Identifier of the destination generated by this connector. If none is set, then a random value will be created. |  |
| Login language a| String |  Code of the language used by the connector. The language determines the code page used for communicating between SAP Adapter and the application server. |  EN |
| Extended Properties a| Object |  |  |
| SAP username a| String |  The username with which the connector will log into SAP. |  | x
| SAP password a| String |  The password associated with the login username. |  | x
| Application server host a| String |  The host of the SAP application server. |  |
| Message server configuration a| <<MessageServer>> |  The configuration for message server usage. |  |
| Enable RFC tracing on server a| Boolean |  Enable or disable RFC trace on the server. |  false |
| Enable CPIC tracing on server a| Enumeration, one of:

** INHERIT
** NO_TRACING
** LEVEL_1
** LEVEL_2
** LEVEL_3 |  Enable or disable RFC trace on the server. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===


== Associated Sources

* <<DocumentSource>>
* <<FunctionSource>>

---
[[outbound-config]]
=== Outbound


Default configuration for SAP extension outbound elements.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<outbound-config_certificate, Certificate>>
* <<outbound-config_simple-connection-provider, Simple Connection Provider>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances when it sees fit. |  |
| Encoding a| String a|  Canonical name of encoding. https://docs.oracle.com/javase/7/docs/technotes/guides/intl/encoding.doc.html[More details about supported encodings]. |  |
| Default Idocument Version a| String |  |  0 |
| Disable Function Template Cache Flag a| Boolean |  |  false |
| Evaluate Response Flag a| Boolean |  |  false |
| Log Trace Flag a| Boolean |  |  false |
| Use SAP Format a| Boolean a|  This parameter was added to honor the Mule 3 format for returning SAP values. Used in the `JCoToBusinessObjectParser` class when parsing a JCoField:

* `true` - If values should be returned as strings with the original SAP format.
* `false` - Original values are converted to the corresponding Java objects, serialized, and returned. This parameter has `false` as its default value. |  false |
| Operation Timeout a| Number |  Timeout for operations. This is a positive value in milliseconds. A value of 0 means indefinite waiting. |  0 |
|===

== Connection Types
[[outbound-config_certificate]]
=== Certificate


Connection provider that relies on the usage of an X509 certificate to authenticate the user.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| SAP system number a| String |  The two-digit system number (sysnr) of the SAP system. |  | x
| SAP client ID a| String |  Three-digit client number. Preserve leading zeros if they appear in the number. |  | x
| Destination Name a| String |  Identifier of the destination generated by this connector. If none is set, then a random value will be created. |  |
| Login language a| String |  Code of the language used by the connector. The language determines the code page used for communicating between SAP Adapter and the application server. |  EN |
| Extended Properties a| Object |  |  |
| X.509 Certificate a| String |  Path to the X.509 certificate. This is required when the connector is working as a client. |  |
| Application server host a| String |  The host of the SAP application server. |  |
| Message server configuration a| <<MessageServer>> |  The configuration for message server usage. |  |
| Enable RFC tracing on server a| Boolean |  Enable or disable RFC trace on the server. |  false |
| Enable CPIC tracing on server a| Enumeration, one of:

** INHERIT
** NO_TRACING
** LEVEL_1
** LEVEL_2
** LEVEL_3 |  Enable or disable RFC trace on the server. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[outbound-config_simple-connection-provider]]
=== Simple Connection Provider


Connection provider that connects using username and password.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| SAP system number a| String |  The two-digit system number (sysnr) of the SAP system. |  | x
| SAP client ID a| String |  Three-digit client number. Preserve leading zeros if they appear in the number. |  | x
| Destination Name a| String |  Identifier of the destination generated by this connector. If none is set, then a random value will be created. |  |
| Login language a| String |  Code of the language used by the connector. The language determines the code page used for communicating between SAP Adapter and the application server. |  EN |
| Extended Properties a| Object |  |  |
| SAP username a| String |  The username with which the connector will log into SAP. |  | x
| SAP password a| String |  The password associated with the login username. |  | x
| Application server host a| String |  The host of the SAP application server. |  |
| Message server configuration a| <<MessageServer>> |  The configuration for message server usage. |  |
| Enable RFC tracing on server a| Boolean |  Enable or disable RFC trace on the server. |  false |
| Enable CPIC tracing on server a| Enumeration, one of:

** INHERIT
** NO_TRACING
** LEVEL_1
** LEVEL_2
** LEVEL_3 |  Enable or disable RFC trace on the server. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Supported Operations

* <<confirmTransactionId>>
* <<createIdoc>>
* <<createTransactionId>>
* <<executeQueuedRemoteFunctionCall>>
* <<executeSynchronousRemoteFunctionCall>>
* <<executeTransactionalRemoteFunctionCall>>
* <<getFunction>>
* <<send>>

== Operations

[[confirmTransactionId]]
=== Confirm Transaction ID
`<sap:confirm-transaction-id>`


Confirms a determined transaction.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Transaction Id a| String |  The ID of the transaction to confirm. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<outbound-config>>

==== Throws
* SAP:RETRY_EXHAUSTED
* SAP:CONNECTIVITY


[[createIdoc]]
=== Create IDoc
`<sap:create-idoc>`


Retrieves a IDocument based on its key.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  The key that contains the required information to retrieve the IDocument. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<outbound-config>>

==== Throws
* SAP:CONFIG_ERROR
* SAP:INVALID_CREDENTIALS_ERROR
* SAP:CONNECTION_ERROR
* SAP:FIELD_NOT_FOUND_ERROR
* SAP:COMMIT_TRANSACTION_ERROR
* SAP:UNKNOWN
* SAP:CONFIRM_TRANSACTION_ERROR
* SAP:XML_PARSING_ERROR
* SAP:CONNECTIVITY
* SAP:BEGIN_TRANSACTION_ERROR
* SAP:EXECUTION_ERROR
* SAP:MISSING_BUSINESS_OBJECT_ERROR
* SAP:TID_CREATION_ERROR
* SAP:ROLLBACK_TRANSACTION_ERROR
* SAP:RETRY_EXHAUSTED
* SAP:INVALID_HOST_ERROR


[[createTransactionId]]
=== Create Transaction ID
`<sap:create-transaction-id>`


Creates a transaction ID to use as part of future calls.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<outbound-config>>

==== Throws
* SAP:RETRY_EXHAUSTED
* SAP:CONNECTIVITY


[[executeQueuedRemoteFunctionCall]]
=== Execute BAPI - Function over qRFC
`<sap:execute-queued-remote-function-call>`

Executes a BAPIFunction over an Queued Remote Function Call (qRFC). A queued RFC is an extension of tRFC. It also ensures that individual steps are processed in sequence. To guarantee that multiple LUWs (Logical Unit of Work/ Transaction) are processed in the order specified by the application. tRFC can be serialized using queues (inbound and outbound queues). Hence the name queued RFC (qRFC).  qRFC is best used for:

* Extension of the Transactional RFC Defined processing sequence.
* Implementation of qRFC is recommended if you want to guarantee that several transactions are processed in a predefined order.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  The name of the function to execute. |  | x
| Content a| Binary |  The BAPIFunction to execute. |  `#[payload]` |
| Transaction Id a| String |  The ID that identifies an RFC so it's run only once. |  |
| Queue Name a| String |  The name of the queue on which the RFC will execute. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<outbound-config>>

==== Throws
* SAP:CONFIG_ERROR
* SAP:INVALID_CREDENTIALS_ERROR
* SAP:CONNECTION_ERROR
* SAP:FIELD_NOT_FOUND_ERROR
* SAP:COMMIT_TRANSACTION_ERROR
* SAP:UNKNOWN
* SAP:CONFIRM_TRANSACTION_ERROR
* SAP:XML_PARSING_ERROR
* SAP:CONNECTIVITY
* SAP:BEGIN_TRANSACTION_ERROR
* SAP:EXECUTION_ERROR
* SAP:MISSING_BUSINESS_OBJECT_ERROR
* SAP:TID_CREATION_ERROR
* SAP:ROLLBACK_TRANSACTION_ERROR
* SAP:RETRY_EXHAUSTED
* SAP:INVALID_HOST_ERROR

[[executeSynchronousRemoteFunctionCall]]
=== Execute BAPI - Function over sRFC

`<sap:execute-synchronous-remote-function-call>`

Executes a BAPIFunction over a Synchronous Remote Function Call (sRFC). A synchronous RFC requires both the systems (client and server) to be available at the time of communication or data transfer. It is the most common type and is required when result is required immediately after the execution of sRFC.

sRFC is a means of communication between systems where acknowledgments are required. The resources of the source system wait at the target system and ensure that they deliver the message and data with ACKD. The data is consistent and reliable for communication. If the target system is not available, the source system resources wait until the target system is available. This may lead to the processes of the source system to go into sleep, RFC, or CPIC mode at the target systems and hence block these resources.

sRFC is best used for:

* Communication between systems.
* Communication between a SAP web application server to a SAP GUI.

NOTE: You must pass a valid XML payload (function) to the SAP component. Avoid or escape characters that collide with XML standards. For slashes, the current convention is to replace them with "_-".

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  The name of the function to execute. |  | x
| Content a| Binary |  The BAPIFunction to execute. |  `#[payload]` |
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<outbound-config>>

==== Throws
* SAP:CONFIG_ERROR
* SAP:INVALID_CREDENTIALS_ERROR
* SAP:CONNECTION_ERROR
* SAP:FIELD_NOT_FOUND_ERROR
* SAP:COMMIT_TRANSACTION_ERROR
* SAP:UNKNOWN
* SAP:CONFIRM_TRANSACTION_ERROR
* SAP:XML_PARSING_ERROR
* SAP:CONNECTIVITY
* SAP:BEGIN_TRANSACTION_ERROR
* SAP:EXECUTION_ERROR
* SAP:MISSING_BUSINESS_OBJECT_ERROR
* SAP:TID_CREATION_ERROR
* SAP:ROLLBACK_TRANSACTION_ERROR
* SAP:RETRY_EXHAUSTED
* SAP:INVALID_HOST_ERROR


[[executeTransactionalRemoteFunctionCall]]
=== Execute BAPI - Function over tRFC

`<sap:execute-transactional-remote-function-call>`

Executes a BAPIFunction over a Transactional Remote Function Call (tRFC).

A tRFC is a special form of asynchronous Remote Function Call (aRFC). Transactional RFC ensures transaction-like handling of processing steps that were originally autonomous. tRFC is an asynchronous communication method that executes the called function module in the RFC server only once, even if the data is sent multiple times due to some network issue. The remote system need not be available at the time when the RFC client program is executing a tRFC.  The tRFC component stores the called RFC function, together with the corresponding data, in the SAP database under a unique transaction ID (TID).

tRFC is similar to aRFC as it does not wait at the target system (similar to a registered post). If the system is not available, it will write the data into aRFC tables with a transaction ID (SM58) that is picked by the scheduler RSARFCSE (which runs every 60 seconds).

tRFC is best used for:

* Extension of Asynchronous RFC.
* For secure communication between systems.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  The name of the function to execute. |  | x
| Content a| Binary |  The BAPIFunction to execute. |  `#[payload]` |
| Transaction Id a| String |  The ID that identifies an RFC so it's run only once |  |
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<outbound-config>>

==== Throws
* SAP:CONFIG_ERROR
* SAP:INVALID_CREDENTIALS_ERROR
* SAP:CONNECTION_ERROR
* SAP:FIELD_NOT_FOUND_ERROR
* SAP:COMMIT_TRANSACTION_ERROR
* SAP:UNKNOWN
* SAP:CONFIRM_TRANSACTION_ERROR
* SAP:XML_PARSING_ERROR
* SAP:CONNECTIVITY
* SAP:BEGIN_TRANSACTION_ERROR
* SAP:EXECUTION_ERROR
* SAP:MISSING_BUSINESS_OBJECT_ERROR
* SAP:TID_CREATION_ERROR
* SAP:ROLLBACK_TRANSACTION_ERROR
* SAP:RETRY_EXHAUSTED
* SAP:INVALID_HOST_ERROR


[[getFunction]]
=== Get Function
`<sap:get-function>`


Retrieves a BAPIFunction based on its name.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  The name of the function to retrieve. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<outbound-config>>

==== Throws
* SAP:CONFIG_ERROR
* SAP:INVALID_CREDENTIALS_ERROR
* SAP:CONNECTION_ERROR
* SAP:FIELD_NOT_FOUND_ERROR
* SAP:COMMIT_TRANSACTION_ERROR
* SAP:UNKNOWN
* SAP:CONFIRM_TRANSACTION_ERROR
* SAP:XML_PARSING_ERROR
* SAP:CONNECTIVITY
* SAP:BEGIN_TRANSACTION_ERROR
* SAP:EXECUTION_ERROR
* SAP:MISSING_BUSINESS_OBJECT_ERROR
* SAP:TID_CREATION_ERROR
* SAP:ROLLBACK_TRANSACTION_ERROR
* SAP:RETRY_EXHAUSTED
* SAP:INVALID_HOST_ERROR


[[send]]
=== Send IDoc

`<sap:send>`

Sends an IDocument to SAP over an RFC. An RFC can be one of two types for IDocuments:

* Transactional (tRFC): A tRFC is a special form of asynchronous remote function call (aRFC). A transactional RFC ensures transaction-like handling of processing steps that were originally autonomous. tRFC is an asynchronous communication method that executes the called function module in the RFC server only once, even if the data is sent multiple times due to some network issue. The remote system need not be available at the time when the RFC client program executes a tRFC.
+
The tRFC component stores the called RFC function, together with the corresponding data, in the SAP database under a unique transaction ID (TID). tRFC is similar to aRFC as it does not wait at the target system (similar to a registered post). If the system is not available, SAP writes the data into aRFC tables with a transaction ID (SM58), which is picked by the  `RSARFCSE` scheduler that runs every 60 seconds.
+
tRFC is best used for:
+
** Extension of Asynchronous RFC.
** For secure communication between systems.
+
* Queued (qRFC): A queued RFC is an extension of tRFC. It also ensures that individual steps are processed in sequence. To guarantee that multiple LUWs (Logical Unit of Work - Transaction) are processed in the order specified by the application. tRFC can be serialized using queues (inbound and  queues). Hence the name queued RFC (qRFC).
+
qRFC is best used for:
+
** Extension of the Transactional RFC Defined processing sequence.
** Implementation of qRFC is recommended if you want to guarantee that several transactions are processed in a predefined order.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  The name of the IDocument to execute. |  | x
| Content a| Binary |  The IDocument to execute. |  `#[payload]` |
| Version a| String |  The version on the IDoc |  |
| Transaction Id a| String |  The ID that identifies an RFC so it's run only once. |  |
| Queue Name a| String |  The name of the queue on which the RFC will execute. |  |
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<outbound-config>>

==== Throws
* SAP:CONFIG_ERROR
* SAP:INVALID_CREDENTIALS_ERROR
* SAP:CONNECTION_ERROR
* SAP:FIELD_NOT_FOUND_ERROR
* SAP:COMMIT_TRANSACTION_ERROR
* SAP:UNKNOWN
* SAP:CONFIRM_TRANSACTION_ERROR
* SAP:XML_PARSING_ERROR
* SAP:CONNECTIVITY
* SAP:BEGIN_TRANSACTION_ERROR
* SAP:EXECUTION_ERROR
* SAP:MISSING_BUSINESS_OBJECT_ERROR
* SAP:TID_CREATION_ERROR
* SAP:ROLLBACK_TRANSACTION_ERROR
* SAP:RETRY_EXHAUSTED
* SAP:INVALID_HOST_ERROR


== Sources

[[DocumentSource]]
=== Document Source
`<sap:document-source>`


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation Timeout a| Number |  |  | x
| Gateway Host a| String |  |  | x
| Gateway Service a| String |  |  | x
| Program ID a| String |  |  | x
| Connection Count a| Number |  |  1 |
| Transactional Action a| Enumeration, one of:

** ALWAYS_BEGIN
** NONE |  The type of beginning action that sources can take regarding transactions. |  NONE |
| Transaction Type a| Enumeration, one of:

** LOCAL
** XA |  The type of transaction to create. Availability depends on the runtime version. |  LOCAL |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in Cluster |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<SapAttributes>>
|===

=== For Configurations
* <<inbound-config>>



[[FunctionSource]]
=== Function Source
`<sap:function-source>`


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation Timeout a| Number |  |  | x
| Gateway Host a| String |  |  | x
| Gateway Service a| String |  |  | x
| Program ID a| String |  |  | x
| Connection Count a| Number |  |  1 |
| Targeted Function a| String |  |  |
| Transactional Action a| Enumeration, one of:

** ALWAYS_BEGIN
** NONE |  The type of beginning action that sources can take regarding transactions. |  NONE |
| Transaction Type a| Enumeration, one of:

** LOCAL
** XA |  The type of transaction to create. Availability depends on the runtime version. |  LOCAL |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in Cluster |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
| Response a| Binary |  |  `#[payload]` |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<SapAttributes>>
|===

=== For Configurations
* <<inbound-config>>



== Types
[[MessageServer]]
=== Message Server

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | The host of the message server. |  | x
| System Id a| String | System ID of the SAP system. |  | x
| Port a| Number | The port with which the connector will log into the message server. |  |
| Group a| String | Group of SAP application servers. |  |
| Router a| String | SAP router string to use for a system protected by a firewall. |  |
|===

[[Reconnection]]
=== Reconnection

The Reconnection Strategy settings are not enabled. Although disabled, reconnection is automatic when a computer running SAP Connector is disconnected and reconnected. Reconnection occurs based on default conditions established in the SAP JCo libraries. However, if the computer is accessing the SAP instance via VPN, reconnection fails and SAP Connector displays TIMEOUT and CANNOT_SEND_IDOC errors.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

See <<Reconnection>> for information on how reconnection occurs.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[SapAttributes]]
=== SAP Attributes

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Transaction Id a| String |  |  |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed. |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is going to be stored. |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
